--- a/input/services/create/configure-service-camel.html.in
+++ b/input/services/create/configure-service-camel.html.in
@@ -2,11 +2,11 @@
 body_template: input/_transom/excursion.html
 ---
 
-# Step 2 - Configure your service
+<h1>Step 2 - Configure your service</h1>
 
 <form markdown="1">
 
-## Service metadata
+<h2>Service metadata</h2>
 
 <div class="form-entry">
   <div class="entry-title">Name</div>
@@ -18,7 +18,7 @@ body_template: input/_transom/excursion.html
   </div>
 </div>
 
-## Project type
+<h2>Project type</h2>
 
 <div class="form-entry">
   <div class="entry-title">Build tool</div>
@@ -47,7 +47,7 @@ body_template: input/_transom/excursion.html
   </div>
 </div>
 
-## Project metadata
+<h2>Project metadata</h2>
 
 <div class="form-entry">
   <div class="entry-title">Group</div>
@@ -69,7 +69,7 @@ body_template: input/_transom/excursion.html
   </div>
 </div>
 
-## Camel endpoints
+<h2>Camel endpoints</h2>
 
 <div class="form-entry">
   <div class="entry-title">Consumers</div>
@@ -96,20 +96,35 @@ body_template: input/_transom/excursion.html
   </div>
 </div>
 
-## Camel components
+<h2>Camel components</h2>
 
-<div class="form-entry checkbox-columns"><div>
-  <h4>Databases</h4>
-  <div><input type="checkbox"/> LevelDB</div><div><input type="checkbox"/> MongoDB</div><div><input type="checkbox" checked="checked"/> PostgreSQL</div></div>
-<div>
-  <h4>Messaging</h4>
-  <div><input type="checkbox"/> JMS</div><div><input type="checkbox"/> AMQP</div><div><input type="checkbox" checked="checked"/> Kafka</div></div>
-<div>
-  <h4>Platforms</h4>
-  <div><input type="checkbox"/> Facebook</div><div><input type="checkbox"/> GitHub</div><div><input type="checkbox"/> Salesforce</div></div>
-<div>
-  <h4>Other</h4>
-  <div><input type="checkbox"/> File</div><div><input type="checkbox"/> HTTP</div><div><input type="checkbox" checked="checked"/> Mail</div></div></div>
+<div class="form-entry checkbox-columns">
+  <div>
+    <h4>Databases</h4>
+    <div><input type="checkbox"/> LevelDB</div>
+    <div><input type="checkbox"/> MongoDB</div>
+    <div><input type="checkbox" checked="checked"/> PostgreSQL</div>
+  </div>
+  <div>
+    <h4>Messaging</h4>
+    <div><input type="checkbox"/> JMS</div>
+    <div><input type="checkbox"/> AMQP</div>
+    <div><input type="checkbox" checked="checked"/> Kafka</div>
+  </div>
+  <div>
+    <h4>Platforms</h4>
+    <div><input type="checkbox"/> Facebook</div>
+    <div><input type="checkbox"/> GitHub</div>
+    <div><input type="checkbox"/> Salesforce</div>
+  </div>
+  <div>
+    <h4>Other</h4>
+    <div><input type="checkbox"/> File</div>
+    <div><input type="checkbox"/> HTTP</div>
+    <div><input type="checkbox" checked="checked"/> Mail</div>
+  </div>
+</div>
+
 <nav class="form-nav">
   <a class="big-button" href="result-camel.html">Create service &#11106;</a>
 </nav>
