--- a/input/services/create/index.html.in
+++ b/input/services/create/index.html.in
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>Gantry</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600,600italic,700,700italic|Ubuntu+Mono:400" type="text/css"/>
-    <link rel="stylesheet" href="https://www.ssorj.net/gantry/main.css" type="text/css"/>
-    <link rel="icon" href="" type="image/png"/>
-    <script type="text/javascript" src="https://www.ssorj.net/gantry/main.js" defer="defer"></script>
-
-
-
-  </head>
-
-<body id="-excursion">
-  <section>
-    <div>
-
+---
+body_template: input/_transom/excursion.html
+---
 
 <h1>Step 1 - Choose your service type</h1>
 
@@ -38,11 +23,3 @@
 <p><a class="big-button gray-out" href="">Create a Spring Boot service &#11106;</a></p>
 
 <p><a class="big-button gray-out" href="">Create a Vert.x service &#11106;</a></p>
-
-
-    </div>
-  </section>
-</body>
-
-
-</html>
