--- a/input/sites/index.html.in
+++ b/input/sites/index.html.in
@@ -3,7 +3,7 @@
   <div id="-view-legend">{{app_name}} - Sites</div>
   <nav>
     <a href="create/index.html" class="small-button">Create site</a>
-    <a href="" class="small-button">Add connection</a>
+    <a href="" class="small-button">Add existing site</a>
   </nav>
 </div>
 
