--- a/input/deployments/create/index.html.in
+++ b/input/deployments/create/index.html.in
@@ -2,11 +2,11 @@
 body_template: input/_transom/excursion.html
 ---
 
-# Configure your deployment
+<h1>Configure your deployment</h1>
 
 <form markdown="1">
 
-## Deployment properties
+<h2>Deployment properties</h2>
 
 <div class="form-entry">
   <div class="entry-title">Service</div>
