--- a/input/sites/create/index.html.in
+++ b/input/sites/create/index.html.in
@@ -4,7 +4,7 @@ body_template: input/_transom/excursion.html
 
 <h1>Step 1 - Choose your site type</h1>
 
-<p><a class="big-button" href="configure-site-openshift.html">Create an OpenShift namespace &#11106;</a></p>
+<p><a class="big-button" href="openshift/index.html">Create an OpenShift namespace &#11106;</a></p>
 
 <p><a class="big-button gray-out" href="">Create an AKS namespace &#11106;</a></p>
 
