--- a/input/services/create/camel/index.html.in
+++ b/input/services/create/camel/index.html.in
@@ -11,7 +11,7 @@ body_template: input/_transom/excursion.html
 <div class="form-entry">
   <div class="entry-title">Name</div>
   <div class="entry-input">
-    <input id="group" type="text" value="duplicates"/>
+    <input id="group" type="text" value="duplicate-detector"/>
   </div>
   <div class="entry-info">
     {{lipsum(15)}}
@@ -62,7 +62,7 @@ body_template: input/_transom/excursion.html
 <div class="form-entry">
   <div class="entry-title">Artifact</div>
   <div class="entry-input">
-    <input id="artifact" type="text" value="duplicates"/>
+    <input id="artifact" type="text" value="duplicate-detector"/>
   </div>
   <div class="entry-info">
     {{lipsum(15)}}
