--- a/input/services/create/index.html.in
+++ b/input/services/create/index.html.in
@@ -8,18 +8,14 @@ body_template: input/_transom/excursion.html
 
 <p><a class="big-button" href="camel/index.html">Create a Camel integration &#11106;</a></p>
 
-<p><a class="big-button" href="">Create a Kafka connector &#11106;</a></p>
-
 <p><a class="big-button gray-out" href="">Create a 3scale API gateway &#11106;</a></p>
 
-<p><a class="big-button gray-out" href="">Create an AMQP message processor &#11106;</a></p>
+<p><a class="big-button gray-out" href="">Create a Kafka connector &#11106;</a></p>
 
 <h2>Runtime services</h2>
 
 <p><a class="big-button" href="quarkus/index.html">Create a Quarkus service &#11106;</a></p>
 
 <p><a class="big-button gray-out" href="">Create a Node.js service &#11106;</a></p>
-
-<p><a class="big-button gray-out" href="">Create a Spring Boot service &#11106;</a></p>
 
 <p><a class="big-button gray-out" href="">Create a Vert.x service &#11106;</a></p>
